banner part and discount part complete

--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- css link start -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Happy New Year</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <!-- banner area start  -->
+        <div class="banner-part">
+          <div class="banner-content">
+            <h4>Happy New Year</h4>
+            <h1>New Year Party Celebration</h1>
+          </div>
+        </div>
+        <!-- banner area end  -->
+      </div>
+    </header>
+    <div class="container">
+      <!-- discount part start -->
+      <div class="discount-part">
+        <p class="off-text">65% OFF</p>
+        <p class="holiday-text">OUR HOLIDAY DEALS ARE BETTER</p>
+        <p class="catagory-text">ALL CATEGORIES</p>
+        <div class="discount-img">
+          <img src="images/new year.png" alt="" />
+        </div>
+      </div>
+      <!-- discount part end  -->
+    </div>
+    <!-- footer area start  -->
+    <footer></footer>
+    <!-- footer area end  -->
+  </body>
 </html>
