midnight party part complete

--- a/index.html
+++ b/index.html
@@ -20,18 +20,34 @@
         <!-- banner area end  -->
       </div>
     </header>
-    <div class="container">
+    <section class="container">
       <!-- discount part start -->
       <div class="discount-part">
         <p class="off-text">65% OFF</p>
         <p class="holiday-text">OUR HOLIDAY DEALS ARE BETTER</p>
         <p class="catagory-text">ALL CATEGORIES</p>
         <div class="discount-img">
-          <img src="images/new year.png" alt="" />
+          <img src="images/new year.png" alt="New Year Bg" />
         </div>
       </div>
       <!-- discount part end  -->
-    </div>
+      <!-- Midnight-party part start -->
+      <div class="midnight-part">
+        <div class="midnight-title">
+          <h1 class="party-heading">Welcome to midnight party</h1>
+          <p class="party-text">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <button class="btn-1">Join Now</button>
+        </div>
+        <div class="midnight-img">
+          <img src="images/year-2024.png" alt="year" />
+        </div>
+      </div>
+      <!-- Midnight-party part end -->
+    </section>
     <!-- footer area start  -->
     <footer></footer>
     <!-- footer area end  -->
