--- a/index.html
+++ b/index.html
@@ -47,6 +47,39 @@
         </div>
       </div>
       <!-- Midnight-party part end -->
+      <!-- schedule area start  -->
+      <div class="schedule-area">
+        <div class="schedule-datails">
+          <p><span>Place:</span>New Park Hotel</p>
+          <p><span>Date:</span>31 December Night 2023</p>
+          <p><span> Time:</span>Evening 7.30 pm to 12.30 am</p>
+          <button class="btn-2">Join Now</button>
+        </div>
+      </div>
+      <!-- schedule area end  -->
+      <!-- offer area start  -->
+      <div class="offer-area">
+        <div class="offer-section-new">
+          <p><span>NEW BEST OFFER</span></p>
+          <h3>Coming Soon</h3>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="offer-section-img">
+          <img src="images/circle-img.png" alt="circle-img" />
+        </div>
+        <div class="offer-section-year">
+          <h3>2024</h3>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+          </p>
+          <img src="images/offer-year.png" alt="offer-year" />
+        </div>
+      </div>
+      <!-- offer area end  -->
     </section>
     <!-- footer area start  -->
     <footer></footer>
