holiday area and portfolio area work

--- a/index.html
+++ b/index.html
@@ -80,6 +80,69 @@
         </div>
       </div>
       <!-- offer area end  -->
+      <!-- Holiday sale area start -->
+      <div class="holiday-sale-area">
+        <div class="holiday-text">
+          <p class="heading">WHAT IS FUNCTIONAL</p>
+          <h2><span>Holidays</span> Sale 50%</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. Eleifend nunc purus quam id fermentum amet amet sit
+            consectetur.
+          </p>
+        </div>
+
+        <div class="holiday-section-one">
+          <img src="images/lady.png" alt="lady" />
+        </div>
+        <div class="holiday-section-two"></div>
+
+        <!-- <div class="holiday-images">
+          <div class="holiday-left">
+            <img src="images/box.png" alt="box" />
+          </div>
+          <div class="holiday-right">
+            <img src="images/lady.png" alt="lady" />
+          </div>
+        </div> -->
+      </div>
+      <!-- Holiday sale area end -->
+      <!-- portfolio area start -->
+      <div class="portfolio-area">
+        <div class="portfolio-content">
+          <span>THE BEST GIFTS</span>
+          <h2>Our Awesome Portfolio</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="portfolio-images-up">
+          <div class="portfolio-img">
+            <img src="images/portfolio/port-1.png" alt="image-1" />
+          </div>
+          <div class="portfolio-img">
+            <img src="images/portfolio/port-2.png" alt="image-2" />
+          </div>
+          <div class="portfolio-img">
+            <img src="images/portfolio/port-3.png" alt="image-3" />
+          </div>
+        </div>
+        <div class="portfolio-images-down">
+          <div class="portfolio-img">
+            <img src="images/portfolio/port-4.png" alt="image-4" />
+          </div>
+          <div class="portfolio-img">
+            <img src="images/portfolio/port-5.png" alt="image-5" />
+          </div>
+          <div class="portfolio-img">
+            <img src="images/portfolio/port-6.png" alt="image-6" />
+          </div>
+        </div>
+      </div>
+      <!-- portfolio area end -->
     </section>
     <!-- footer area start  -->
     <footer></footer>
