footer end but other section some work and edit later

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <!-- css link start -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Happy New Year</title>
+    <script
+      src="https://kit.fontawesome.com/89c801a01d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -143,9 +147,60 @@
         </div>
       </div>
       <!-- portfolio area end -->
+      <!-- Newsletter area start -->
+      <div class="newsletter-area">
+        <div class="newsletter-img">
+          <img src="images/mail.png" alt="mail" />
+        </div>
+        <div class="newsletter-section">
+          <h2>Subscribe Newsletter</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <div class="newsletter-input">
+            <input type="email" name="" id="" placeholder="user@gmail.com" />
+            <button class="btn-3">Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <!-- Newsletter area end -->
     </section>
     <!-- footer area start  -->
-    <footer></footer>
+    <footer class="footer-bg">
+      <div class="container">
+        <div class="footer-section">
+          <div class="footer-address">
+            <p>
+              44, Big Building Roosevelt Street <br />Beach Gardens Florida
+              33410
+            </p>
+          </div>
+          <div class="footer-contact">
+            <p><i class="fa-solid fa-phone-volume"></i>+00 123 584 124</p>
+            <p><i class="fa-solid fa-globe"></i>www.website.com</p>
+          </div>
+        </div>
+
+        <div class="footer-social-links">
+          <a href=""
+            ><img src="images/social-links/facebook.png" alt="facebook"
+          /></a>
+          <a href="">
+            <img src="images/social-links/instagram.png" alt="instagram" /></a
+          ><a href=""
+            ><img src="images/social-links/twitter.png" alt="twitter" /></a
+          ><a href=""
+            ><img src="images/social-links/linkedin.png" alt="linkedin"
+          /></a>
+        </div>
+        <div class="footer-details">
+          <p>2017, All Rights Reserved.</p>
+          <p class="fl-right">Unsubscribe</p>
+        </div>
+      </div>
+    </footer>
     <!-- footer area end  -->
   </body>
 </html>
