--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
             molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
             euismod.
           </p>
-          <div class="newsletter-input">
-            <input type="email" name="" id="" placeholder="user@gmail.com" />
-            <button class="btn-3">Subscribe</button>
+          <div class="newsletter-form">
+            <form action="">
+              <input type="email" name="" id="" placeholder="user@gmail.com" />
+              <button class="btn-3">Subscribe</button>
+            </form>
           </div>
         </div>
       </div>
