--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="banner-part">
           <div class="banner-content">
             <h4>Happy New Year</h4>
-            <h1>New Year Party Celebration</h1>
+            <h1>New Year Party <br />Celebration</h1>
           </div>
         </div>
         <!-- banner area end  -->
@@ -40,9 +40,9 @@
         <div class="midnight-title">
           <h1 class="party-heading">Welcome to midnight party</h1>
           <p class="party-text">
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            As the clock strikes midnight tonight and we welcome the dawn of a
+            new year, I want to extend my warmest wishes to each and every one
+            of you.
           </p>
           <button class="btn-1">Join Now</button>
         </div>
@@ -67,9 +67,9 @@
           <p><span>NEW BEST OFFER</span></p>
           <h3>Coming Soon</h3>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            Wishing you a year fully loaded with happiness. Wishing every day of
+            the new year to be filled with success, happiness, and prosperity
+            for you.
           </p>
         </div>
         <div class="offer-section-img">
@@ -78,7 +78,9 @@
         <div class="offer-section-year">
           <h3>2024</h3>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+            Wishing you a year fully loaded with happiness. Wishing every day of
+            the new year to be filled with success, happiness, and prosperity
+            for you.
           </p>
           <img src="images/offer-year.png" alt="offer-year" />
         </div>
@@ -90,10 +92,9 @@
           <p class="heading">WHAT IS FUNCTIONAL</p>
           <h2><span>Holidays</span> Sale 50%</h2>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod. Eleifend nunc purus quam id fermentum amet amet sit
-            consectetur.
+            Don't miss our MEGA SALE: Save up to 50% on select items!
+            <br />This offer is for a limited time only. Hurry, come to our
+            event and enjoy.
           </p>
         </div>
 
@@ -118,9 +119,10 @@
           <span>THE BEST GIFTS</span>
           <h2>Our Awesome Portfolio</h2>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            Don't miss our MEGA SALE: come on our event and Save up to 50% on
+            Check our portfolio!
+            <br />This offer is for a limited time only. Hurry, come to our
+            event and enjoy.
           </p>
         </div>
         <div class="portfolio-images-up">
@@ -154,11 +156,7 @@
         </div>
         <div class="newsletter-section">
           <h2>Subscribe Newsletter</h2>
-          <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
-          </p>
+          <p>Enter Your email and Subscribe Now and update our new event</p>
           <div class="newsletter-form">
             <form action="">
               <input type="email" name="" id="" placeholder="user@gmail.com" />
