footer area edit

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="container">
         <div class="footer-section">
           <div class="footer-address">
-            <p>
+            <p class="address">
               44, Big Building Roosevelt Street <br />Beach Gardens Florida
               33410
             </p>
@@ -186,7 +186,7 @@
           /></a>
         </div>
         <div class="footer-details">
-          <p>2017, All Rights Reserved.</p>
+          <p class="reserve">2017, All Rights Reserved.</p>
           <p class="fl-right">Unsubscribe</p>
         </div>
       </div>
