button title and social links title add

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             new year, I want to extend my warmest wishes to each and every one
             of you.
           </p>
-          <button class="btn-1">Join Now</button>
+          <button class="btn-1" title=" Hurry Up Join Now">Join Now</button>
         </div>
         <div class="midnight-img">
           <img src="images/year-2024.png" alt="year" />
@@ -57,7 +57,7 @@
           <p><span>Place:</span>New Park Hotel</p>
           <p><span>Date:</span>31 December Night 2023</p>
           <p><span> Time:</span>Evening 7.30 pm to 12.30 am</p>
-          <button class="btn-2">Join Now</button>
+          <button class="btn-2" title="Join Now">Join Now</button>
         </div>
       </div>
       <!-- schedule area end  -->
@@ -149,8 +149,14 @@
           <p>Enter Your email and Subscribe Now and update our new event</p>
           <div class="newsletter-form">
             <form action="">
-              <input type="email" name="" id="" placeholder="user@gmail.com" />
-              <button class="btn-3">Subscribe</button>
+              <input
+                type="email"
+                name=""
+                id=""
+                placeholder="user@gmail.com"
+                title="Please Enter Your Email"
+              />
+              <button class="btn-3" title="Subscribe Now">Subscribe</button>
             </form>
           </div>
         </div>
@@ -175,14 +181,26 @@
 
         <div class="footer-social-links">
           <a href=""
-            ><img src="images/social-links/facebook.png" alt="facebook"
+            ><img
+              src="images/social-links/facebook.png"
+              alt="facebook"
+              title="facebook"
           /></a>
           <a href="">
-            <img src="images/social-links/instagram.png" alt="instagram" /></a
+            <img
+              src="images/social-links/instagram.png"
+              alt="instagram"
+              title="instagram" /></a
           ><a href=""
-            ><img src="images/social-links/twitter.png" alt="twitter" /></a
+            ><img
+              src="images/social-links/twitter.png"
+              alt="twitter"
+              title="twitter" /></a
           ><a href=""
-            ><img src="images/social-links/linkedin.png" alt="linkedin"
+            ><img
+              src="images/social-links/linkedin.png"
+              alt="linkedin"
+              title="linkedin"
           /></a>
         </div>
         <div class="footer-details">
